Fixed irresponsive buttons and layout issues

--- a/css/layout.css
+++ b/css/layout.css
@@ -140,7 +140,7 @@ header .social li a {
 }
 
 header .social li a:hover {
-    color: #11ABB0;
+    color: #0ef8ff;
 }
 
 /* scrolldown link */
@@ -165,7 +165,7 @@ header .scrolldown a {
 }
 
 header .scrolldown a:hover {
-    color: #11ABB0;
+    color: #0ef8ff;
 }
 
 /* primary navigation
@@ -239,7 +239,7 @@ ul#nav li a:active {
 }
 
 ul#nav li.current a {
-    color: #00e5e5;
+    color: #0ef8ff;
 }
 
 
@@ -259,7 +259,7 @@ ul#nav li.current a {
 }
 
 #about a:hover, #about a:focus {
-    color: #11ABB0;
+    color: #0ef8ff;
 }
 
 #about h2 {
@@ -327,7 +327,7 @@ ul#nav li.current a {
 }
 
 #resume a, #resume a:visited {
-    color: #119398;
+    color: #0ef8ff;
 }
 
 #resume a:hover, #resume a:focus {
@@ -341,7 +341,7 @@ ul#nav li.current a {
 }
 
 #resume h1 span {
-    border-bottom: 3px solid #06d2d3;
+    border-bottom: 3px solid #0ef8ff;
     padding-bottom: 5px;
 }
 
@@ -431,7 +431,7 @@ ul#nav li.current a {
     position: absolute;
     width: 13px;
     height: 13px;
-    border: 4px solid #0bd7e6;
+    border: 4px solid #0ef8ff;
     background-color: #fbfdff;
     border-radius: 100%;
     top: 15%;
@@ -1093,7 +1093,7 @@ ul#nav li.current a {
 }
 
 #contact a, #contact a:visited {
-    color: #11ABB0;
+    color: #0ef8ff;
 }
 
 #contact a:hover, #contact a:focus {
@@ -1181,6 +1181,7 @@ ul#nav li.current a {
     border: none;
     cursor: pointer;
     height: auto;
+    width: auto;
     display: inline-block;
     border-radius: 3px;
     margin-left: 17%;
@@ -1192,7 +1193,7 @@ ul#nav li.current a {
 }
 
 #contact span.required {
-    color: #11ABB0;
+    color: #0ef8ff;
     font-size: 13px;
 }
 
@@ -1325,6 +1326,6 @@ footer .social-links li:first-child {
 }
 
 #go-top a:hover {
-    background-color: #0F9095;
+    background-color: #0ef8ff;
 }
 
